# elasticsearch-arrow-experiments

./: .gitignore  Makefile  README.md  build.gradle.kts  config-example.ini
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/src/main/java/co/elastic/benchmarks/: SizeBenchmark.java
java/src/main/java/co/elastic/es_flight/client/: ESClientAuthMiddleware.java
java/src/main/java/co/elastic/es_flight/esql/: ESQLArrowResponse.java  ESQLQuery.java  ESQLResponse.java  ESQLResponseGenerator.java
java/src/main/java/co/elastic/es_flight/server/: ESFlightServer.java  ESServerAuthHandler.java
python/: auth_header.py  es_auth.py  requirements.txt  test-pandas.py  test-polars.py
rust/: Cargo.toml
rust/src/: main.rs
src/main/java/co/elastic/es_flight/: DataIngester.java
src/main/java/co/elastic/es_flight/client/: ESClientAuthenticator.java  ESFlightTestClient.java
src/main/java/co/elastic/es_flight/esql/: ESQLQuery.java  ESQLResponse.java
src/main/java/co/elastic/es_flight/server/: ESFlightServer.java  SSLUtils.java
